Update workshop motivation section in index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <h3>Workshop Motivation ✨</h3>
                     <p class="fragment fade-in-then-semi-out">JupyterHub administrators & deployers know a lot about deploying JupyterHub in different settings...</p>
                     <p class="fragment fade-in-then-semi-out">...but there hasn't always been a clear pathway to feed this knowledge and insight back to the project team </p>
-                    <p class="fragment fade-in-then-semi-out">This workshop is part of an experiment to connect the project community & deployers on a regular cadence</p>
+                    <p class="fragment">This workshop is part of an experiment to connect the project community & deployers on a regular cadence</p>
                     <p class="fragment fade-in-then-semi-out"></p>
                 </section>
       <!-- Why run a users workshop? --> 
@@ -177,6 +177,7 @@
                 </section>
         <!-- Why run a users workshop? --> 
                      <section>
+                        <h3>Workshop Motivation ✨</h3>
                         <p>This workshop was inspired by the recommendations from the "Voices of JupyterHub" report, part of CZI EOSS grant</p>
                         <p><a target="_blank" href="https://voicesofjupyterhub.orgmycology.com/">Read more at voicesofjupyterhub.orgmycology.com</a></p>
                         <p>Or come to the talk on Wednesday morning (11:35am, Royal Room) ☀️</p>
