Update JupyterHub questions and image sizes

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <p class="r-fit-text">What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
                             <p class="r-fit-text">If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
                             <p class="r-fit-text">What are some of the security or compliance requirements that significantly shaped your implementation?</p>
-                            <p class="r-fit-text">How do you learn about JupyterHub updates? </p>
+                            <p class="r-fit-text">How do you learn about JupyterHub updates? How well does this fit with your organisations operations and needs?</p>
                         </section>
         <!-- Discussion time --> 
                     <section>
@@ -220,12 +220,12 @@
                         <!-- Session Agenda -->
                 <section>
                     <h1>☕BREAK!</h1>
-                    <img src="static/DecolonisingKnowledge.jpg" width="800" />
+                    <img src="static/DecolonisingKnowledge.jpg" width="400" height="400" />
                </section>
         <!-- Contributing to JH-intro --> 
                  <section>
                    <h1>Contributing to JupyterHub</h1>
-                    <img src="static/contributing.jpg" width="800" />
+                   <img src="static/Contributing.jpg" width="400" height="400" />
                 </section>
         <!-- Contributing to JH-brainstorming --> 
                      <section>
