--- a/index.html
+++ b/index.html
@@ -258,11 +258,22 @@
         <!-- Next steps - SignUp to stay in touch --> 
                  <section>
                     <h3>What's next?</h3>
+                    <div class="columns">
+                    <div class="column" style="width: 50%">
                      <ul>
                          <li>Check out the links on the next slide</li>
                          <li>Keep an eye out for blog posts covering this event soon!</li>
                          <li>Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></li>
                      </ul>
+                    </div>   
+                    <div class="column" style="width: 50%">
+                  <img
+                    class="fragment current-visible"
+                    data-fragment-index="1"
+                    alt="QR code for feedback form"
+                    src="static/feedbackformQRcode.png"
+                  />
+                    </div>
                 </section>
                 <section>
                     <h2>Contributing to JupyterHub</h2>
