Enhance text styling and image size in index.html
Updated text elements to improve readability and adjusted image dimensions.

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
         <!-- Contributing to JH-brainstorming --> 
                      <section>
                         <h3>Contributing to JupyterHub: Brainstorming 🧠</h3>
-                        <p>How would you describe your relationship with the JupyterHub project and community?
-                        <p>How do you collect feedback from your users? How do they, or you, pass on this feedback to the project? How could this process be smoother?</p>
-                        <p>What would motivate you to become more involved with JupyterHub development or community? What are the practical steps the community could take to support that journey?</p>
-                        <p><i>If we're a large group, we'll split up into groups again</i></p>
+                        <p class="r-fit-text">How would you describe your relationship with the JupyterHub project and community?
+                        <p class="r-fit-text">How do you collect feedback from your users? How do they, or you, pass on this feedback to the project? How could this process be smoother?</p>
+                        <p class="r-fit-text">What would motivate you to become more involved with JupyterHub development or community? What are the practical steps the community could take to support that journey?</p>
+                        <p class="r-fit-text"><b>If we're a large group, we'll split up into groups again</b></p>
                     </section>
             <!-- Contributing to JH-use cases --> 
                      <section>
@@ -253,7 +253,7 @@
                  <section>
                     <h2>Telling the story of JupyterHub: <br> Findings from the Voices of JupyterHub project</h2> 
                     <p>Wednesday November 5, 2025, 11:35am PST <br> Royal Room</p>
-                    <img src="static/hublogo.svg" width="800" />
+                    <img src="static/hublogo.svg" width="400" height="300" />
                 </section>
         <!-- Next steps - SignUp to stay in touch --> 
                  <section>
@@ -261,15 +261,14 @@
                     <div class="columns">
                     <div class="column" style="width: 50%">
                      <ul>
-                         <li>Check out the links on the next slide</li>
-                         <li>Keep an eye out for blog posts covering this event soon!</li>
-                         <li>Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></li>
+                         <li class="r-fit-text">Check out the links on the next slide</li>
+                         <li class="r-fit-text">Keep an eye out for blog posts covering this event soon!</li>
+                         <li class="r-fit-text">Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></li>
                      </ul>
                     </div>   
                     <div class="column" style="width: 50%">
                   <img
-                    class="fragment current-visible"
-                    data-fragment-index="1"
+                    class="fragment"
                     alt="QR code for feedback form"
                     src="static/feedbackformQRcode.png"
                   />
