Replace list with paragraphs in next steps section

--- a/index.html
+++ b/index.html
@@ -258,21 +258,14 @@
         <!-- Next steps - SignUp to stay in touch --> 
                  <section>
                     <h3>What's next?</h3>
-                    <div class="columns">
-                    <div class="column" style="width: 50%">
-                     <ul>
-                         <li class="r-fit-text">Check out the links on the next slide</li>
-                         <li class="r-fit-text">Keep an eye out for blog posts covering this event soon!</li>
-                         <li class="r-fit-text">Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></li>
-                     </ul>
-                    </div>   
-                    <div class="column" style="width: 50%">
+                         <p class="r-fit-text">Check out the links on the next slide</p>
+                         <p class="r-fit-text">Keep an eye out for blog posts covering this event soon!</p>
+                         <p class="r-fit-text">Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></p>
                   <img
                     class="fragment"
                     alt="QR code for feedback form"
                     src="static/feedbackformQRcode.png"
                   />
-                    </div>
                 </section>
                 <section>
                     <h2>Contributing to JupyterHub</h2>
