--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
         <!-- Next steps - SignUp to stay in touch --> 
                  <section>
                     <h3>What's next?</h3>
-                         <p class="r-fit-text">Check out the links on the next slide</p>
+                         <p class="r-fit-text">Check out the links on the next slide 🔗</p>
                          <p class="r-fit-text">Keep an eye out for blog posts covering this event soon!</p>
-                         <p class="r-fit-text">Fill out this form to share feedback: <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></p>
+                         <p class="r-fit-text">Fill out this form to share feedback & stay in touch </br> <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></p>
                   <img
-                    class="fragment"
+                    class="fragment" width="200" height="200"
                     alt="QR code for feedback form"
                     src="static/feedbackformQRcode.png"
                   />
