Fix indentation for QR code image in index.html

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                          <p class="r-fit-text">Keep an eye out for blog posts covering this event soon!</p>
                          <p class="r-fit-text">Fill out this form to share feedback & stay in touch </br> <a target="_blank" href="https://forms.gle/gxYHkyaBbHEGpZXm6">https://forms.gle/gxYHkyaBbHEGpZXm6</a></p>
                   <img
-                    class="fragment" width="200" height="200"
+                    width="200" height="200"
                     alt="QR code for feedback form"
                     src="static/feedbackformQRcode.png"
                   />
