Update timings and content for group sessions

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                         <td>Scene Setting</td>
                       </tr>
                       <tr>
-                        <td>00:20 - 01:00</td>
+                        <td>00:20 - 00:40</td>
                         <td>Group Connections</td>
                       </tr>
                     <tr>
-                        <td>01:00 - 02:15</td>
+                        <td>00:40 - 02:15</td>
                         <td>Group Discussions & Shareouts</td>
                     </tr>
                     <tr>
@@ -184,7 +184,7 @@
                     </section>
         <!-- Group introductions --> 
                  <section>
-                   <h3>Group Connections 💬(40 mins) </h3>
+                   <h3>Group Connections 💬(20 mins) </h3>
                      <ul>
                          <li>Spend 3-5 mins introducing yourself</li>
                          <li>Name and organisation</li>
@@ -193,15 +193,16 @@
                              <li>What assumption about running JupyterHub did you make, that turned out to be completely wrong?</li>
                              <li>What session are you most looking forward to at JupyterCon?</li>
                          </ul>
-                         <li><b>If we're a larger group we'll split up into groups to do this & rotate after 20 mins or so</b></li>
+                         <li><b>If we're a larger group we'll split up into groups to do this & rotate after 10 mins or so</b></li>
                      </ul>
                             </section>
         <!-- Groups!Discussion time --> 
                  <section>
-                    <h3>Breakout disussions 👥(45 mins)</h2>
-                     <p><b>Pick up to 3 of the following questions to discuss</b></p>
+                    <h3>Breakout disussions 👥(60 mins)</h2>
+                     <p><b>Pick some of the following questions to discuss</b></p>
                      <p>Add notes to the shared notes document as you chat</p>
                      <p>Pick someone to report back to the main group</p>
+                     <p>We'll remind you to switch questions </p>
                      <i><p>If we're a smaller group, we'll go through the questions all together</p></i>
                  </section>
                         <section>
@@ -209,7 +210,7 @@
                             <p class="r-fit-text">If you could go back and give yourself one piece of advice before your first deployment, what would it be?</p>
                             <p class="r-fit-text">What's the most surprising infrastructure or operational challenge you've faced with JupyterHub?</p>
                             <p class="r-fit-text">What are some of the common challenges you see with other deployments? How could these be tackled upstream or collectively?</p>
-                            <p class="r-fit-text">If you could add one feature to JupyterHub tomorrow, what would make your life easier?</p>
+                            <p class="r-fit-text">If you could add one feature to JupyterHub tomorrow, what would make your life easier? How could you help with it's development?</p>
                             <p class="r-fit-text">What are some of the security or compliance requirements that significantly shaped your implementation?</p>
                             <p class="r-fit-text">How do you learn about JupyterHub updates? How well does this fit with your organisations operations and needs?</p>
                         </section>
