Add DOI link to JupyterHub section in index.html

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               Users of JupyterHub <br />@ JupyterCon 2025
             </h1>
             <img src="static/hublogo.svg" width="800" />
+                    <p classe="r-fit-text"><a target="_blank" href="https://doi.org/10.5281/zenodo.17546733">DOI:10.5281/zenodo.17546733</a></p>
                 </section>
         <!-- Housekeeping --> 
                 <section>
